# MNIST_in_cpp

./: .gitignore  CMakeLists.txt  README.md
doc/: tutorial.md
docs/: index.html  weights.json
src/: main.cpp
src/activations/: relu.cpp  relu.h  softmax.cpp  softmax.h
src/core/: module.h  weight_io.h
src/data/: mnist_loader.cpp  mnist_loader.h
src/layers/: conv2d.cpp  conv2d.h  dropout.h  flatten.cpp  flatten.h  fully_connected.cpp  fully_connected.h  max_pool.cpp  max_pool.h
src/loss/: cross_entropy.cpp  cross_entropy.h
src/model/: model.cpp  model.h  trainer.cpp  trainer.h
src/optimizer/: sgd.cpp  sgd.h
web/: server.py
web/templates/: index.html
